# EMCctrl

./: .gitignore  CMakeLists.txt  my_windeployqt.bat
Measurement/: CS114_3_calibration_050626_092406.csv  CS114_3_measurement_050626_101110.csv  CS114_3_measurement_050626_103431.csv  CS114_3_measurement_050626_115309.csv  CS114_3_measurement_050626_130712.csv  RE-102_Horizontal_from_300_to_1000_MHz_20260703_130357.csv  RE-102_Horizontal_from_30_to_300_MHz_20260716_153531.csv  RE-102_Horizontal_from_30_to_300_MHz_20260716_153805.csv  RE-102_Horizontal_from_30_to_300_MHz_20260716_153948.csv  RE-102_Horizontal_from_30_to_300_MHz_20260717_125647.csv
include/: EmcMeasurementManager.h  GpibDevice.h  MediaButtonsWidget.h  PowerAmplifier.h  RemoteLogger.h  StatusBarManager.h  common.h  diag_ipu_159_01.h  ftdibitbang.h  gpib.h  gpib_cmd.h  mainwindow.h  networkautomation.h  qledindicator.h  re102.h  rf_limits.h  rf_step_attenuator.h
resources/: app.rc  darkorangestyle.qss  resources.qrc
src/: EmcMeasurementManager.cpp  GpibDevice.cpp  MediaButtonsWidget.cpp  PowerAmplifier.cpp  RemoteLogger.cpp  ftdibitbang.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow_arb_generator.cpp  mainwindow_att.cpp  mainwindow_cs114.cpp  mainwindow_draw.cpp  mainwindow_pa.cpp  mainwindow_power_supply.cpp  mainwindow_spectrum.cpp  networkautomation.cpp  qledindicator.cpp  rf_limits.cpp
